--- a/styles/app.scss
+++ b/styles/app.scss
@@ -4,4 +4,5 @@
 
 body {
   font-family: "Mulish", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  @apply dark:bg-[#011] bg-gray-50;
 }
