--- a/styles/app.scss
+++ b/styles/app.scss
@@ -4,5 +4,5 @@
 
 body {
   font-family: "Mulish", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  @apply dark:bg-[#011] bg-white;
+  @apply dark:bg-[#210d18] bg-white;
 }
